--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon ./src/index.js"
   },
   "author": "Alexander Karan",
   "license": "ISC",
   "dependencies": {
+    "dynamodb": "^1.2.1",
     "express": "^4.17.1",
+    "nodemon": "^2.0.2",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.2"
   }
