--- a/docker/dev.yml
+++ b/docker/dev.yml
@@ -5,10 +5,15 @@ services:
     working_dir: /application
     command: "npm start"
     volumes:
+      - ../config:/application/config
       - ../src:/application/src
       - ../package.json:/application/package.json
     depends_on:
       - "dynamodb"
+    environment:
+      - DYNAMODB_HOST=http://dynamodb:8000
+    links:
+      - dynamodb:dynamodb
 
   dynamodb:
     image: amazon/dynamodb-local
