--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Alexander Karan",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.614.0",
     "dynamodb": "^1.2.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.2",
