--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "author": "Alexander Karan",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.614.0",
+    "amazon-cognito-identity-js": "^3.2.5",
+    "aws-sdk": "^2.634.0",
     "dynamodb": "^1.2.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwk-to-pem": "^2.0.3",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
+    "request": "^2.88.2",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.2"
   }
